# fcitx5-windows

./: CMakeLists.txt
.github/workflows/: ci.yml
patches/: fcitx5.patch
